--- a/article/references.bib
+++ b/article/references.bib
@@ -3,7 +3,7 @@
 @MISC{base:airbnb,
     author       = {Inside Airbnb},
     title        = {Listings},  
-    howpublished = {\url{http://data.insideairbnb.com/united-states/ny/new-york-city/2017-04-02/data/listings.csv.gz}},
+    howpublished = {\url{https://goo.gl/dT6m7H}},
     note         = {Acessed Apr 2017. Date Compiled April 2, 2017},
     year         = {2017}     
 }
@@ -11,7 +11,7 @@
 @MISC{base:incidents,
     author       = {New York City Police Department},
     title        = {Incidents},  
-    howpublished = {\url{https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Current-YTD/5uac-w243/data}},
+    howpublished = {\url{https://goo.gl/gzZFg2}},
     note         = {Acessed Apr 2017},
     year         = {2016}     
 }
@@ -19,7 +19,7 @@
 @MISC{base:cultural,
     author       = {Department of Cultural Affairs},
     title        = {Cultural Organizations},  
-    howpublished = {\url{https://data.cityofnewyork.us/Recreation/DCLA-Cultural-Organizations/u35m-9t32}},
+    howpublished = {\url{https://goo.gl/5jHzxa}},
     note         = {Acessed Apr 2017. Last Update April 7, 2017},
     year         = {2017}     
 }
@@ -27,7 +27,7 @@
 @MISC{base:borough,
     author       = {BetaNYC},
     title        = {NYC Borough},  
-    howpublished = {\url{http://data.beta.nyc/dataset/nyc-borough-boundaries/resource/7c164faa-4458-4ff2-9ef0-09db00b509ef?view\_id=8c05eff7-54d1-4359-8183-0e278e91b01a}},
+    howpublished = {\url{https://goo.gl/gWP1yp}},
     note         = {Acessed Apr 2017},
     year         = {2015}     
 }
